--- a/NEWS
+++ b/NEWS
@@ -172,3 +172,6 @@ version 0.6.9: (2016-08-01)
 
 version 0.7.0: (2016-08-02)
 - Sequential updates for mu in MCMC (no spikes case only)
+
+version 0.7.1: (2016-08-05)
+- Random reference in sequential updates for mu (no spikes case only)
