--- a/vignettes/BASiCSIntroNoSpikes.Rmd
+++ b/vignettes/BASiCSIntroNoSpikes.Rmd
@@ -111,6 +111,8 @@ plot(MCMC_Output, Param = "mu", Gene = 5, log = "y")
 abline(h = Mu[5], col = "red")
 plot(MCMC_Output, Param = "mu", Gene = 10, log = "y")
 abline(h = Mu[10], col = "red")
+plot(MCMC_Output, Param = "mu", Gene = 51, log = "y")
+abline(h = Mu[51], col = "red")
 plot(MCMC_Output, Param = "mu", Gene = 100, log = "y")
 abline(h = Mu[100], col = "red")
 plot(MCMC_Output, Param = "delta", Gene = 1)
