--- a/NEWS
+++ b/NEWS
@@ -181,3 +181,6 @@ version 0.7.2: (2016-08-05)
 
 version 0.7.3: (2016-08-08)
 - Reference set to be the gene closest to the average (no spikes case only)
+
+version 0.7.4: (2016-08-09)
+- Modified constrain to include 'expressed' genes only (no spikes case only)
