--- a/NEWS
+++ b/NEWS
@@ -184,3 +184,6 @@ version 0.7.3: (2016-08-08)
 
 version 0.7.4: (2016-08-09)
 - Modified constrain to include 'expressed' genes only (no spikes case only)
+
+version 0.7.5: (2016-08-10)
+- Modified constrain to include 'expressed' genes only (no spikes case only)
