--- a/NEWS
+++ b/NEWS
@@ -187,3 +187,6 @@ version 0.7.4: (2016-08-09)
 
 version 0.7.5: (2016-08-10)
 - Modified constrain to include 'expressed' genes only (no spikes case only)
+
+version 0.7.6: (2016-08-11)
+- As v 0.7.5 but with extra argument for constrain limit (no spikes case only)
