--- a/NEWS
+++ b/NEWS
@@ -190,3 +190,6 @@ version 0.7.5: (2016-08-10)
 
 version 0.7.6: (2016-08-11)
 - As v 0.7.5 but with extra argument for constrain limit (no spikes case only)
+
+version 0.7.7: (2016-08-12)
+- ConstrainType = 3 implemented (no spikes case only)
