--- a/NEWS
+++ b/NEWS
@@ -244,3 +244,6 @@ version 0.7.20: (2016-11-14)
 
 version 0.7.21: (2016-11-15)
 - 'ConstrainType' = 4, 5 added (exclude genes with capture in less than 'ConstrainLimit'100% of the cells)
+
+version 0.7.22: (2016-11-16)
+- Fixed bug for 'ConstrainType' = 5 (affects no spike case only)
