--- a/NEWS
+++ b/NEWS
@@ -255,4 +255,4 @@ version 0.7.24: (2016-11-23)
 - Median changed to mean when calculating identifiability constrain for the no spike case
 
 version 0.7.25: (2017-01-11)
-- Fixed typo in vignette file 
+- Fixed typo in vignette file (thanks to Dmitriy Zhukov for pointing this out)
