--- a/vignettes/BASiCSIntro.Rmd
+++ b/vignettes/BASiCSIntro.Rmd
@@ -119,12 +119,27 @@ DataExample = newBASiCS_Data(Counts, Tech, SpikeInfo, BatchInfo = rep(c(1,2), ea
 Some datasets require filtering before performing the analysis. This is in order to remove cells and/or transcripts with very low expression counts. The function `BASiCS_Filter` performs this filtering 
 
 ```{r Filter}
-Filter = BASiCS_Filter(Counts, Tech, SpikeInput, 
+Filter = BASiCS_Filter(Counts = Counts, Tech = Tech, SpikeInput = SpikeInput, 
                        MinTotalCountsPerCell = 2, MinTotalCountsPerGene = 2, 
                        MinCellsWithExpression = 2, MinAvCountsPerCellsWithExpression = 2)
 SpikeInfoFilter = SpikeInfo[SpikeInfo$SpikeID %in% 
                               names(Filter$IncludeGenes)[Filter$IncludeGenes == TRUE],]
-FilterData = newBASiCS_Data(Filter$Counts, Filter$Tech, SpikeInfoFilter)
+FilterData = newBASiCS_Data(Counts = Filter$Counts, Tech = Filter$Tech, 
+                            SpikeInfo = SpikeInfoFilter)
+```
+
+A similar code can be used when the data contains multiple batches of cells (in this example, there are 2 batches with 5 cells each):
+
+```{r FilterBatch}
+Filter = BASiCS_Filter(Counts = Counts, Tech = Tech, 
+                       SpikeInput = SpikeInput, 
+                       BatchInfo = c(rep(1, times = 5), rep(2, times = 5)),
+                       MinTotalCountsPerCell = 2, MinTotalCountsPerGene = 2, 
+                       MinCellsWithExpression = 2, MinAvCountsPerCellsWithExpression = 2)
+SpikeInfoFilter = SpikeInfo[SpikeInfo$SpikeID %in% 
+                              names(Filter$IncludeGenes)[Filter$IncludeGenes == TRUE],]
+FilterData = newBASiCS_Data(Counts = Filter$Counts, Tech = Filter$Tech, 
+                            SpikeInfo = SpikeInfoFilter, BatchInfo = Filter$BatchInfo)
 ```
 
 For illustration purposes, the BASiCS package includes a built-in simulated dataset:
