--- a/vignettes/BASiCS.Rmd
+++ b/vignettes/BASiCS.Rmd
@@ -1,13 +1,17 @@
----
-title: 'Introduction to BASiCS: Bayesian Analysis of Single-Cell Sequencing data'
-author: "Catalina A. Vallejos"
-date: '`r Sys.Date()`'
-output: html_vignette
-vignette: >
-  %\VignetteIndexEntry{Vignette Title} 
-  %\VignetteEngine{knitr::rmarkdown} 
-  \usepackage[utf8]{inputenc}
----
+<!--
+%\VignetteIndexEntry{Introduction to BASiCS: Bayesian Analysis of Single-Cell Sequencing data}
+%\VignettePackage{BiocStyle}
+%\VignetteEngine{knitr::knitr}
+-->
+
+```{r, echo=FALSE, results="hide", message=FALSE}
+require(knitr)
+opts_chunk$set(error=FALSE, message=FALSE, warning=FALSE)
+```
+
+```{r style, echo=FALSE, results='asis'}
+BiocStyle::markdown()
+```
 
 ***
 
