--- a/vignettes/BASiCS.Rmd
+++ b/vignettes/BASiCS.Rmd
@@ -169,14 +169,14 @@ Chain2 <- BASiCS_MCMC(Data = Data2, N = 20000, Thin = 20, Burn = 10000,
 
 The input values required to perform this analysis are:
 
-* `objectRef`: the output of running the `MCMC_BASiCS` on the reference group of cells 
+* `ChainRef`: the output of running the `MCMC_BASiCS` on the reference group of cells 
 
-* `objectTest`: the output of running the `MCMC_BASiCS` on the test group of cells 
+* `ChainTest`: the output of running the `MCMC_BASiCS` on the test group of cells 
 
 Additionally, `EpsilonM` sets the log2 fold change (log2FC) in expression ($\mu$) and `EpsilonD` the log2FC in over-dispersion ($\delta$). To adjust for differences in overall RNA content, an internal offset correction is performed when `OffSet=TRUE`. This is the recommended default.  
 
 ```{r quick-start-test, results='hide'}
-Test <- BASiCS_TestDE(objectRef = Chain1, objectTest = Chain2,
+Test <- BASiCS_TestDE(ChainRef = Chain1, ChainTest = Chain2,
                         EpsilonM = 0.4, EpsilonD = 0.4, OffSet = TRUE)
 ```
 
