--- a/NEWS
+++ b/NEWS
@@ -264,3 +264,6 @@ version 0.7.26: (2017-02-09)
 
 version 0.7.27: (2017-05-09)
 - Bug fixed in 'BASiCS_Filter' function to stop the code crashing when there are genes with zero counts across all cells. 
+
+version 0.7.28: (2017-07-21)
+- Fixed dependency to 'data.table' to prevent errors in 'BASiCS_LoadChain' function(thanks to Yongchao Ge for pointing out this issue). This change affects the DESCRIPTION file as well as the 'BASiCS_LoadChain' function. 
