--- a/NEWS
+++ b/NEWS
@@ -267,3 +267,8 @@ version 0.7.27: (2017-05-09)
 
 version 0.7.28: (2017-07-21)
 - Fixed dependency to 'data.table' to prevent errors in 'BASiCS_LoadChain' function(thanks to Yongchao Ge for pointing out this issue). This change affects the DESCRIPTION file as well as the 'BASiCS_LoadChain' function. 
+
+version 0.7.29: (2017-07-24)
+- 'BASiCS:::HiddenBASiCS_MCMC_Start' function modified regarding the definition of starting values for mu (to avoid adding +1 when it's not necessary)
+-  'BASiCS:::HiddenBASiCS_MCMC_Start' modified to have better starting values for delta (this is based on eq 2 from Vallejos et al, 2016)
+
