--- a/NEWS
+++ b/NEWS
@@ -275,3 +275,5 @@ version 0.7.29: (2017-07-24)
 version 0.7.30: (2017-07-26)
 - Typo fixed in 'BASiCS:::HiddenBASiCS_MCMC_Start' function (thanks to @bdulken for pointing out this issue)
 
+version 1.0.0: (2017-07-29)
+- Initial big merge with Nils' changes (in preparation for Bioconductor submission)
